--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "sass": "^1.32.8",
-    "web-vitals": "^1.1.0"
+    "web-vitals": "^1.1.0",
+    "webpack": "^4.44.2"
   },
   "scripts": {
     "start": "react-scripts start",
