--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postbuild": "react-snap"
+    "postbuild": "react-snap",
+    "sitemap": "babel-node ./src/sitemap.generator.js"
+
   },
   "eslintConfig": {
     "extends": [
